@@ -171,6 +171,23 @@ uname -r | grep BOOT ||
 /sbin/depmod -a -F /boot/System.map-%{kernelversion} %{kernelversion} >/dev/null 2>&1 || true
 
 %changelog
+* Tue Nov 16 2004 14:59:00 +0200 Philipp Reisner <phil@linbit.com>
+- drbd (0.7.6-1)
+  * Make DRBD work on Linux-2.6.10-rc2 and newer: Replaced
+    sock_alloc() by sock_create(), replaced TASK_ZOMBIE by 
+    EXIT_ZOMBIE.
+  * Range checks in drbdadm for all numeric configure parameters.
+  * A fix to make ioctl()s work on machines with 64bit kernel space 
+    and 32bit user space. 
+  * Ioctl()s are only allowed if the caller has CAP_SYS_ADMIN set.
+  * Removal of warnings on 64bit architectures.
+  * Backport of find_first_bit() for x86_64 aka AMD64 for use on 
+    that architecture under Linux-2.4.x
+  * Changed drbdadm to do the syncer config before the net config.
+  * Improvements to the drbddisk script, to do the right thing
+    in case Heartbeat is configured with a small timeout than DRBD.
+  * Lots of updates to the way Debian's DRBD packages works.
+
 * Fri Oct 1 2004 11:33:00 +0200 Philipp Reisner <phil@linbit.com>
 - drbd (0.7.5-1)
   * Fix a bug that could case read requests to return wrong data
